tests/baselines/reference/shorthand-property-es5-es6.errors.txt
error TS1204: Cannot compile modules into 'es2015' when targeting 'ES5' or lower.
tests/cases/compiler/test.ts(2,19): error TS2307: Cannot find module './foo'.


!!! error TS1204: Cannot compile modules into 'es2015' when targeting 'ES5' or lower.
==== tests/cases/compiler/test.ts (1 errors) ====
    
    import {foo} from './foo';
                      ~~~~~~~
!!! error TS2307: Cannot find module './foo'.
    const baz = 42;
    const bar = { foo, baz };
    